# Lightrag

./: .gitignore  Makefile  pyproject.toml  ruff.toml
.codex/: gsd-file-manifest.json
.codex/agents/: gsd-debugger.toml  gsd-executor.toml  gsd-phase-researcher.toml  gsd-plan-checker.toml  gsd-planner.toml  gsd-project-researcher.toml  gsd-research-synthesizer.toml  gsd-roadmapper.toml  gsd-verifier.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-ingestion-versioning-ci-cd-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/cli/: ingest.py  versioning.py
src/indexing/: __init__.py  indexer.py
src/ingestion/: __init__.py  chunking.py  constants.py  extract.py  ingest.py  pipeline.py
src/retrieval/: retriever.py
src/storage/: __init__.py  manifest.py
src/versioning/: __init__.py  registry.py
tests/: test_indexing_retrieval_contracts.py  test_ingestion_smoke.py
tests/ingestion/: test_ingestion_pipeline.py
tests/versioning/: test_version_registry.py
