[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightragtest"
version = "0.1.0"
description = "LightRAG testbed"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "ruff==0.9.10",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
